--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,8 +1,8 @@
-name: CI
+name: Laravel
 
 on:
   pull_request:
-    branches: [ "main", "develop" ]
+    branches: [ "develop", "main" ]
 
 jobs:
   laravel-tests:
@@ -10,10 +10,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+      - uses: actions/checkout@v4
+
+      - name: Install system dependencies first
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libsodium23 libsodium-dev sqlite3 libsqlite3-dev
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
-      - uses: actions/check
+          php-version: '8.2'
+          extensions: pdo, pdo_sqlite, sqlite3, sodium, mbstring, xml, ctype, json, bcmath, fileinfo, tokenizer, zip
+          tools: composer:v2
+
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
       - name: Install Dependencies
@@ -26,21 +36,18 @@ jobs:
         run: |
           mkdir -p database
           touch database/database.sqlite
-
       - name: Installing Package.json
         run: npm install
-
       - name: Build Assets
         run: npm run build
-
-      - name: Execute tests (Unit and Feature tests) via PEST
+      - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
         env:
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
         run: php artisan test --parallel
 
       - name: Execute Larastan
-        run: vendor/bin/phpstan analyse
+        run: vendor/bin/phpstan analyze
 
       - name: Execute Laravel Pint
         run: vendor/bin/pint --test
